Update 'mmrt836yo-python' component image to: quay.io/rhtap_qe/rhtap-qe:8c3c7a0f62e7b054fd2ee0c45b6edcbc0a2e7a0f@sha256:5d8f804f5331e5a3307af50b3f57d4338f306c5c3d3d7a0a6282c48861a84068

--- a/components/mmrt836yo-python/overlays/development/deployment-patch.yaml
+++ b/components/mmrt836yo-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: mmrt836yo-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe:8c3c7a0f62e7b054fd2ee0c45b6edcbc0a2e7a0f@sha256:5d8f804f5331e5a3307af50b3f57d4338f306c5c3d3d7a0a6282c48861a84068
+          name: container-image
